# Simple-Python-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: AUTHORS.rst  README.md  pyproject.toml
{{cookiecutter.project_name}}/docs/: conf.py  index.rst  installation.rst
{{cookiecutter.project_name}}/notebooks/: CONVERT.md  README.md
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
