[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.package_description }}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
readme = "README.md"
packages = [
  {include = "{{cookiecutter.project_slug}}"}
]

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
nbmake = "^1.5.4"

[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
recommonmark = "^0.7.1"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.4"
nbformat = "^5.10.4"
nbconvert = "^7.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
